# ins_test

./: .gitignore  PRD（产品需求文档骨架，已填充至可开写详细需求）.md  README.md
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routers/: evaluation.py
backend/app/services/: evaluation.py  llm_client.py
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  service.ts  types.ts
frontend/src/components/: LeftPanel.vue  RightPanel.vue
frontend/src/components/results/: CompareResult.vue  DetectorIssues.vue  JuryResult.vue
frontend/src/store/: evaluation.ts
